syntax = "proto3";

package userpb;
option go_package = "github.com/aungmyozaw92/go-grpc-starter/proto/userpb";

service UserService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc GetProfile (ProfileRequest) returns (ProfileResponse);
  rpc GetUserList (UserListRequest) returns (UserListResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message RegisterRequest {
  string username = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string mobile = 5;
  string image_url = 6;
  string password = 7;
  bool is_active = 8;
  int32 role_id = 9;
}

message AuthResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  string token = 4;
} 

message LoginRequest {
  string username = 1;
  string password = 2;
}

message ProfileRequest {
  string token = 1;
}

message ProfileResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  ProfileData data = 4;
}

message ProfileData {
  int32 id = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string phone = 5;
  string mobile = 6;
  bool is_active = 7;
  int32 role_id = 8;
  string image_url = 9;
  string created_at = 10;
  string updated_at = 11;
}

message UserListRequest {
  string token = 1;
  int32 page = 2;
  int32 limit = 3;
  string search = 4;
}

message UserListResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  UserListData data = 4;
}

message UserListData {
  repeated UserData users = 1;
  PaginationMeta pagination = 2;
}

message UserData {
  int32 id = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string phone = 5;
  string mobile = 6;
  bool is_active = 7;
  int32 role_id = 8;
  string image_url = 9;
  string created_at = 10;
  string updated_at = 11;
}

message PaginationMeta {
  int32 current_page = 1;
  int32 per_page = 2;
  int32 total_pages = 3;
  int32 total_count = 4;
  bool has_next = 5;
  bool has_prev = 6;
}

// Get User by ID
message GetUserRequest {
  string token = 1;
  int32 user_id = 2;
}

message GetUserResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  UserData data = 4;
}

// Create User
message CreateUserRequest {
  string token = 1;
  string username = 2;
  string name = 3;
  string email = 4;
  string phone = 5;
  string mobile = 6;
  string image_url = 7;
  string password = 8;
  bool is_active = 9;
  int32 role_id = 10;
}

message CreateUserResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  UserData data = 4;
}

// Update User
message UpdateUserRequest {
  string token = 1;
  int32 user_id = 2;
  string username = 3;
  string name = 4;
  string email = 5;
  string phone = 6;
  string mobile = 7;
  string image_url = 8;
  bool is_active = 9;
  int32 role_id = 10;
}

message UpdateUserResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  UserData data = 4;
}

// Delete User
message DeleteUserRequest {
  string token = 1;
  int32 user_id = 2;
}

message DeleteUserResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
}